# mianotes-web-service

./: .gitignore  LICENCE  PRD.md  README.md  SPEC.md  install.ps1  install.sh  pyproject.toml  settings.json  start-dev.sh  start.sh  storage.example.json
.github/workflows/: ci.yml
docs/: 01-Introduction.md  02-Installation.md  03-Workflow.md  04-API.md  05-Customisation.md  06-Mia-And-Agents.md  07-MCP.md  08-Architecture.md  09-Development.md  10-Testing.md  11-Comments.md  12-Security.md  13-Database.md  14-API-token.md  MANIFEST.md  README.md  TOC.md  api.md  introduction.md  workflow.md
docs/01-about/: 01-overview.md  02-use-cases.md  03-core-concepts.md
docs/02-getting-started/: 01-Installation.md  01-installation.md  01a-Installation-GitHub.md  01b-Installation-package.md  02-first-run.md  03-configuration.md  04-ollama-openai.md  05-troubleshooting.md
docs/03-for-humans/: 01-human-workflow.md  02-folders-notes-tags.md  03-sharing-and-comments.md  04-publishing.md
docs/04-for-agents/: 01-agent-overview.md  02-api-tokens.md  03-mcp-server.md  04-codex-claude.md  05-agent-playbook.md
docs/05-mia/: 01-meet-mia.md  03-parser-and-ingestion.md
docs/06-api-reference/: 01-api-overview.md  02-auth-users.md  03-folders-notes-tags.md  04-comments-mia-jobs.md  06-publishing-settings.md
docs_new/: README.md  TOC.md
docs_old/: 01-Introduction.md  02-Installation.md  03-Workflow.md  04-API.md  07-MCP.md  08-Architecture.md  09-Development.md  10-Testing.md  11-Prompting-Mia.md
scripts/: mianotes-mcp.sh  seed_demo.py  with-temp-storage.sh
tests/: conftest.py  test_api_auth.py  test_api_jobs.py  test_api_notes.py  test_api_notes_split_databases.py  test_api_publish.py  test_api_search.py  test_api_storage.py  test_api_tokens.py  test_api_users_folders.py  test_api_users_projects.py  test_api_users_topics.py  test_db_init.py  test_default_workspace_seed.py  test_env_file.py  test_folder_repository.py  test_job_runner.py  test_mcp_server.py  test_mia.py  test_note_files.py  test_parsing.py  test_publishing_navigation.py  test_query_plans.py  test_seed_demo.py  test_settings.py  test_skill_install.py  test_storage.py  test_storage_migration.py  test_storage_settings.py
(+153 files in other folders)
