[project]
name = "mianotes-web-service"
version = "0.1.0"
description = "Python API service for Mianotes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-only" }
dependencies = [
  "alembic>=1.13,<2.0",
  "email-validator>=2.0,<3.0",
  "fastapi>=0.115,<1.0",
  "markitdown[all]>=0.1.5,<0.2.0",
  "markitdown-ocr>=0.1.0,<0.2.0",
  "openai>=1.0,<2.0",
  "pillow>=10.0,<13.0",
  "pydantic-settings>=2.0,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "trafilatura>=1.9,<2.0",
  "uvicorn>=0.30,<1.0",
  "yt-dlp>=2024.12.13,<2027.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8,<9",
  "ruff>=0.8,<1.0",
]

[project.scripts]
mianotes-web-service = "mianotes_web_service.main:main"
mianotes-mcp = "mianotes_web_service.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mianotes_web_service"]
artifacts = ["src/mianotes_web_service/publishing/themes/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
